wip: integrate backend
- todo: fix enum collision in api generation
