# openapi.yaml
@@ -25,7 +25,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/VCImage'
+                $ref: '#/components/schemas/VCImageGet'
           description: The image has been retrieved successfully
         '400':
           description: There has been an incident when retrieving the image. Please
@@ -72,7 +72,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/VCImage'
+                  $ref: '#/components/schemas/VCImageGet'
           description: The images has been listed successfully
         '400':
           description: There has been an incident when listing the images. Please
@@ -86,7 +86,7 @@ paths:
         content:
           multipart/form-data:
             schema:
-              $ref: '#/components/schemas/VCImageRequest'
+              $ref: '#/components/schemas/VCImagePostRequest'
         required: true
       security:
       - cookieAuth: []
@@ -97,7 +97,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/VCImage'
+                $ref: '#/components/schemas/VCImagePost'
           description: The image has been uploaded successfully
         '400':
           description: There has been an incident when uploading the image. Please
@@ -123,7 +123,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/VDImage'
+                $ref: '#/components/schemas/VDImageGet'
           description: The image has been retrieved successfully
         '400':
           description: There has been an incident when retrieving the image. Please
@@ -170,7 +170,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/VDImage'
+                  $ref: '#/components/schemas/VDImageGet'
           description: The images has been listed successfully
         '400':
           description: There has been an incident when listing the images. Please
@@ -184,7 +184,7 @@ paths:
         content:
           multipart/form-data:
             schema:
-              $ref: '#/components/schemas/VDImageRequest'
+              $ref: '#/components/schemas/VDImagePostRequest'
         required: true
       security:
       - cookieAuth: []
@@ -195,19 +195,64 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/VDImage'
+                $ref: '#/components/schemas/VDImagePost'
           description: The image has been uploaded successfully
         '400':
           description: There has been an incident when uploading the image. Please
             try again
 components:
   schemas:
-    VCImage:
+    Model1ffEnum:
+      enum:
+      - YOLOv5s
+      - YOLOv8s
+      type: string
+      description: |-
+        * `YOLOv5s` - YOLOV5S
+        * `YOLOv8s` - YOLOV8S
+    Model2caEnum:
+      enum:
+      - EfficientNetB1
+      - YOLOv8s-cls
+      type: string
+      description: |-
+        * `EfficientNetB1` - EFFNETB1
+        * `YOLOv8s-cls` - YOLOV8SCLS
+    VCImageGet:
+      type: object
+      properties:
+        code:
+          type: string
+          description: The unique code for the image
+          maxLength: 12
+        model:
+          allOf:
+          - $ref: '#/components/schemas/Model2caEnum'
+          description: |-
+            The ML model for classifying vehicles
+
+            * `EfficientNetB1` - EFFNETB1
+            * `YOLOv8s-cls` - YOLOV8SCLS
+        image:
+          type: string
+          format: uri
+          description: The uploaded image
+        inf_time:
+          type: number
+          format: double
+          description: The inference time for the model
+        pred_class:
+          type: string
+          description: The predicted class for the image
+      required:
+      - code
+      - image
+    VCImagePost:
       type: object
       properties:
         model:
           allOf:
-          - $ref: '#/components/schemas/VCImageModelEnum'
+          - $ref: '#/components/schemas/Model2caEnum'
           description: |-
             The ML model for classifying vehicles
 
@@ -219,20 +264,12 @@ components:
           description: The image file to be uploaded
       required:
       - image
-    VCImageModelEnum:
-      enum:
-      - EfficientNetB1
-      - YOLOv8s-cls
-      type: string
-      description: |-
-        * `EfficientNetB1` - EFFNETB1
-        * `YOLOv8s-cls` - YOLOV8SCLS
-    VCImageRequest:
+    VCImagePostRequest:
       type: object
       properties:
         model:
           allOf:
-          - $ref: '#/components/schemas/VCImageModelEnum'
+          - $ref: '#/components/schemas/Model2caEnum'
           description: |-
             The ML model for classifying vehicles
 
@@ -244,12 +281,40 @@ components:
           description: The image file to be uploaded
       required:
       - image
-    VDImage:
+    VDImageGet:
+      type: object
+      properties:
+        code:
+          type: string
+          description: The unique code for the image
+          maxLength: 12
+        model:
+          allOf:
+          - $ref: '#/components/schemas/Model1ffEnum'
+          description: |-
+            The ML model for detecting vehicles
+
+            * `YOLOv5s` - YOLOV5S
+            * `YOLOv8s` - YOLOV8S
+        image:
+          type: string
+          format: uri
+          description: The uploaded image
+        inf_time:
+          type: number
+          format: double
+          description: The inference time for the model
+        label_count_dict:
+          description: The dictionary containing the count of each label
+      required:
+      - code
+      - image
+    VDImagePost:
       type: object
       properties:
         model:
           allOf:
-          - $ref: '#/components/schemas/VDImageModelEnum'
+          - $ref: '#/components/schemas/Model1ffEnum'
           description: |-
             The ML model for detecting vehicles
 
@@ -261,20 +326,12 @@ components:
           description: The image file to be uploaded
       required:
       - image
-    VDImageModelEnum:
-      enum:
-      - YOLOv5s
-      - YOLOv8s
-      type: string
-      description: |-
-        * `YOLOv5s` - YOLOV5S
-        * `YOLOv8s` - YOLOV8S
-    VDImageRequest:
+    VDImagePostRequest:
       type: object
       properties:
         model:
           allOf:
-          - $ref: '#/components/schemas/VDImageModelEnum'
+          - $ref: '#/components/schemas/Model1ffEnum'
           description: |-
             The ML model for detecting vehicles
 
